--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,6 @@ seaborn==0.12.0
 scipy==1.9.1
 networkx~=2.8.7
 matplotlib~=3.6.1
-git+https://github.com/ldingemans/lime.git
+-e git+git+https://github.com/ldingemans/lime.git#egg=lime
+setuptools~=63.4.1
+pillow~=9.2.0
