--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ seaborn==0.12.0
 scipy==1.9.1
 networkx~=2.8.7
 matplotlib~=3.6.1
--e git+git+https://github.com/ldingemans/lime.git#egg=lime
+lime @ git+https://github.com/ldingemans/lime.git@3365ccee00664263d3be903f7a34fa49676a8f42
 setuptools~=63.4.1
 pillow~=9.2.0
