--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ tqdm==4.64.1
 deepface==0.0.75
 scikit-learn==1.1.2
 obonet==0.3.0
-phenopy==0.5.3
+phenopy @ git+https://github.com/ldingemans/phenopy.git@9f0763237156b903b9f3f6d69f3baef314467c48
 openpyxl==3.0.10
 seaborn==0.12.0
 scipy==1.9.1
