--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ tqdm==4.64.1
 deepface==0.0.75
 scikit-learn==1.1.2
 obonet==0.3.0
-phenopy @ git+https://github.com/ldingemans/phenopy.git@135b2e2d37c5813e53811e23a435cbf38b2567c3
+phenopy @ git+https://github.com/ldingemans/phenopy.git
 openpyxl==3.0.10
 seaborn==0.12.0
 scipy==1.9.1
