--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -20,7 +20,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          os: [ windows-latest, macOS-latest, ubuntu-latest ]
+          os: [  ubuntu-latest ]
           python: [ "3.9" ]
 
       steps:
