--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ tensorflow==2.5.0
 tqdm==4.64.1
 deepface==0.0.75
 scikit-learn==1.2.0
+gensim==4.3.1
 obonet==0.3.0
 numpy==1.19.5
 phenopy @ git+https://github.com/ldingemans/phenopy.git@9f0763237156b903b9f3f6d69f3baef314467c48
