--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,8 @@ tensorflow==2.5.0
 tqdm==4.64.1
 deepface==0.0.75
 scikit-learn==1.2.0
-pandas==1.0.0
 obonet==0.3.0
-gensim~=3.7.0
-phenopy @ git+https://github.com/ldingemans/phenopy.git@9f0763237156b903b9f3f6d69f3baef314467c48
+phenopy
 openpyxl==3.0.10
 seaborn==0.12.0
 scipy==1.9.1
