--- a/.github/workflows/tutorial_notebook.yml
+++ b/.github/workflows/tutorial_notebook.yml
@@ -25,8 +25,8 @@ jobs:
         - name: Install packages
           run: |
             python -m pip install --upgrade pip jupyter
+            pip install numpy==1.19.5
             pip install .
-            pip install --upgrade --force-reinstall numpy==1.19.5
             python -m ipykernel install --user --name run-notebook --display-name "Run notebook"
 
         - name: Run notebooks
