--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -29,8 +29,8 @@ jobs:
         - name: Install package
           run: |
             python -m pip install --upgrade pip
+            pip install numpy==1.19.5
             pip install .
-            pip install --upgrade --force-reinstall numpy==1.19.5
         - name: Run tests
           run: |
             python -m unittest discover -s phenoscore
