--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -29,7 +29,7 @@ jobs:
         - name: Install package
           run: |
             python -m pip install --upgrade pip
-            pip install numpy==1.19.5
+            pip install numpy
             pip install .
         - name: Run tests
           run: |
