--- a/.github/workflows/tutorial_notebook.yml
+++ b/.github/workflows/tutorial_notebook.yml
@@ -25,7 +25,7 @@ jobs:
         - name: Install packages
           run: |
             python -m pip install --upgrade pip jupyter
-            pip install numpy==1.19.5
+            pip install numpy
             pip install .
             python -m ipykernel install --user --name run-notebook --display-name "Run notebook"
 
