--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -30,6 +30,7 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install .
+            pip install numpy==1.21.5
         - name: Run tests
           run: |
             python -m unittest discover -s phenoscore
