--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -30,6 +30,7 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install .
+            pip install --upgrade --force-reinstall numpy==1.19.2
         - name: Run tests
           run: |
             python -m unittest discover -s phenoscore
