--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
-tensorflow==2.5.0
-tqdm==4.64.1
-deepface==0.0.75
-scikit-learn==1.2.0
-numpy
-obonet==0.3.0
-gensim==3.8.0
-phenopy @ git+https://github.com/ldingemans/phenopy.git@9f0763237156b903b9f3f6d69f3baef314467c48
-openpyxl==3.0.10
-seaborn==0.12.0
-scipy==1.9.1
-networkx~=2.8.7
-matplotlib~=3.6.1
+gensim==3.8.3
+keras==2.11.0
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
 lime @ git+https://github.com/ldingemans/lime.git@3365ccee00664263d3be903f7a34fa49676a8f42
-setuptools~=63.4.1
-pillow~=9.2.0
-torch==1.13.0
-torchvision==0.14.0
+matplotlib==3.7.1
 menpo==0.11.0
-mxnet
+mkl-service==2.4.0
+mtcnn==0.1.1
+mxnet==1.7.0.post2
+obonet==0.3.0
+opencv-python==4.6.0.66
+openpyxl==3.0.10
+pandas==2.0.0
+phenopy @ git+https://github.com/ldingemans/phenopy.git@9f0763237156b903b9f3f6d69f3baef314467c48
+retina-face==0.0.12
+scikit-image==0.19.3
+scikit-learn==1.2.2
+scipy==1.10.0
+seaborn==0.12.2
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
+tensorflow-intel==2.11.0
+tensorflow-io-gcs-filesystem==0.27.0
+torch==1.13.0
+torch-audiomentations==0.11.0
+torch-pitch-shift==1.2.4
+torchaudio==0.13.1
+torchmetrics==0.11.4
+torchvision==0.14.0
+tqdm==4.64.1
