--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -30,6 +30,8 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install .
+            pip uninstall numpy
+            pip install numpy
         - name: Run tests
           run: |
             python -m unittest discover -s phenoscore
