--- a/.github/workflows/tutorial_notebook.yml
+++ b/.github/workflows/tutorial_notebook.yml
@@ -27,6 +27,8 @@ jobs:
             python -m pip install --upgrade pip jupyter
             pip install .
             python -m ipykernel install --user --name run-notebook --display-name "Run notebook"
+            pip uninstall numpy -y
+            pip install numpy -y
         - name: Run notebooks
           run: |
             jupyter execute --kernel_name run-notebook notebooks/tutorial.ipynb
