--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -30,8 +30,8 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install .
-            pip uninstall numpy -y
-            pip install numpy -y
+            pip uninstall -y numpy
+            pip install -y numpy
         - name: Run tests
           run: |
             python -m unittest discover -s phenoscore
