--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -31,7 +31,7 @@ jobs:
             python -m pip install --upgrade pip
             pip install .
             pip uninstall -y numpy
-            pip install -y numpy
+            pip install numpy
         - name: Run tests
           run: |
             python -m unittest discover -s phenoscore
