--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -29,6 +29,7 @@ jobs:
         - name: Install package
           run: |
             python -m pip install --upgrade pip
+            pip install numpy==1.23.5
             pip install .
         - name: Run tests
           run: |
