--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ tqdm==4.64.1
 deepface==0.0.75
 scikit-learn==1.2.0
 obonet==0.3.0
-phenopy @ git+https://github.com/ldingemans/phenopy.git
+phenopy @ git+https://github.com/ldingemans/phenopy.git@1e15f6106640fbc0dd33474d31743ed53182a7cd
 openpyxl==3.0.10
 seaborn==0.12.0
 scipy==1.9.1
