--- a/.github/workflows/tutorial_notebook.yml
+++ b/.github/workflows/tutorial_notebook.yml
@@ -27,7 +27,7 @@ jobs:
             python -m pip install --upgrade pip jupyter
             pip install .
             pip uninstall -y numpy
-            pip install numpy
+            pip install numpy==1.23.5
             python -m ipykernel install --user --name run-notebook --display-name "Run notebook"
         - name: Run notebooks
           run: |
