--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -2,13 +2,10 @@ name: CI
 
 on:
     push:
-      # Uncomment when we have `development` and remove `main`
-#      branches: [ development ]
-      branches: [ main ]
+      branches: [ main, development ]
     pull_request:
-      # Uncomment when we have `development`
-#      branches: [ main, development ]
-      branches: [ main ]
+      branches: [ main, development ]
+
 
 jobs:
     build:
