--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -17,7 +17,8 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          os: [  ubuntu-latest, windows-latest ]
+#          os: [  ubuntu-latest, windows-latest ]
+          os: [  ubuntu-latest ]
           python: [ "3.9" ]
 
       steps:
