--- a/.github/workflows/python_ci.yml
+++ b/.github/workflows/python_ci.yml
@@ -15,10 +15,11 @@ jobs:
       runs-on: ${{ matrix.os }}
 
       strategy:
-        fail-fast: false
+        fail-fast: true
+        max-parallel: 1
         matrix:
-#          os: [  ubuntu-latest, windows-latest ]
-          os: [  ubuntu-latest ]
+          os: [  ubuntu-latest, windows-latest ]
+#          os: [  ubuntu-latest ]
           python: [ "3.9" ]
 
       steps:
