--- a/.github/workflows/tutorial_notebook.yml
+++ b/.github/workflows/tutorial_notebook.yml
@@ -1,36 +1,36 @@
-#name: Run tutorial jupyter notebook
-#
-#on:
-#    push:
-#    #  branches: [ main, develop ]
-#    pull_request:
-#    #  branches: [ main, develop ]
-#
-#jobs:
-#    build:
-#      runs-on: ${{ matrix.os }}
-#
-#      strategy:
-#        fail-fast: false
-#        matrix:
-#          os: [ ubuntu-latest, windows-latest ]
-#          python: [ "3.9" ]
-#
-#      steps:
-#        - uses: actions/checkout@v2
-#        - name: Initialize Python ${{ matrix.python }}
-#          uses: actions/setup-python@v4.3.1
-#          with:
-#            python-version: ${{ matrix.python }}
-#        - name: Install packages
-#          run: |
-#            python -m pip install --upgrade pip jupyter
-#            pip install .
-#            pip uninstall -y numpy
-#            pip install mxnet==1.7.0post2 --no-dependencies
-#            pip install numpy==1.23.5
-#            python -m ipykernel install --user --name run-notebook --display-name "Run notebook"
-#        - name: Run notebooks
-#          run: |
-#            cd phenoscore
-#            jupyter execute --kernel_name run-notebook ../notebooks/tutorial.ipynb
+name: Run tutorial jupyter notebook
+
+on:
+    push:
+    #  branches: [ main, develop ]
+    pull_request:
+    #  branches: [ main, develop ]
+
+jobs:
+    build:
+      runs-on: ${{ matrix.os }}
+
+      strategy:
+        fail-fast: false
+        matrix:
+          os: [ ubuntu-latest, windows-latest ]
+          python: [ "3.9" ]
+
+      steps:
+        - uses: actions/checkout@v2
+        - name: Initialize Python ${{ matrix.python }}
+          uses: actions/setup-python@v4.3.1
+          with:
+            python-version: ${{ matrix.python }}
+        - name: Install packages
+          run: |
+            python -m pip install --upgrade pip jupyter
+            pip install .
+            pip uninstall -y numpy
+            pip install mxnet==1.7.0post2 --no-dependencies
+            pip install numpy==1.23.5
+            python -m ipykernel install --user --name run-notebook --display-name "Run notebook"
+        - name: Run notebooks
+          run: |
+            cd phenoscore
+            jupyter execute --kernel_name run-notebook ../notebooks/tutorial.ipynb
